tempfile/derive_more/tests/compile_fail/as_mut/unknown_field_attr_arg.rs
#[derive(derive_more::AsMut)]
struct Foo {
    #[as_mut(baz)]
    bar: i32,
}

fn main() {}
